<resources>
    <string name="app_name">YBP11</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Numero do Placet</string>
    <string name="prompt_password">Data de Nascimento</string>
    <string name="action_sign_in">Acessar</string>
    <string name="action_solicitar_acesso">Solicitar Acesso</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Numero do Placet é inválido! Verifique seu passaporte</string>
    <string name="error_invalid_password">Data de Nascimento Inválida!</string>
    <string name="error_incorrect_password">Data de Nascimento Inválida!</string>
    <string name="error_field_required">Campo Obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to MENU -->
    <string name="title_membros">Membros</string>
    <string name="title_lojas">Lojas</string>
    <string name="title_activity_main">Inicio</string>
    <string name="title_calendario">Calendario</string>
    <string name="title_perfil">Perfil</string>
</resources>
